<resources>
    <string name="app_name">InternTasks2A</string>

    <string name="city">İstanbul</string>
    <string name="today">Bugün</string>
    <string name="weather_degree">26°</string>
    <string name="sunny">Güneşli</string>
    <string name="wind">Rüzgar</string>
    <string name="wind_speed">3 km/s</string>
    <string name="degree_range">14°- 27°</string>
    <string name="date1">Sal, 02 Nisan</string>
    <string name="date2">Çar, 03 Nisan</string>
    <string name="date3">Per, 04 Nisan</string>
    <string name="date4">Cum, 05 Nisan</string>
    <string name="button_text">Verileri Güncelle</string>
    <string name="list_date">01 Nisan 2023</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>