<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/image_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_refresh" />

    <TextView
        android:id="@+id/text_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_city" />

    <ImageView
        android:id="@+id/image_sunny"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_today"
        app:srcCompat="@drawable/ic_sunny" />

    <TextView
        android:id="@+id/text_weather_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/weather_degree"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_sunny" />

    <TextView
        android:id="@+id/text_sunny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/sunny"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weather_degree" />

    <TextView
        android:id="@+id/text_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/wind"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sunny" />

    <ImageView
        android:id="@+id/image_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_xsmall"
        android:textColor="@color/text"
        app:layout_constraintEnd_toStartOf="@+id/text_wind_speed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_wind"
        app:srcCompat="@drawable/ic_wind" />

    <TextView
        android:id="@+id/text_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_wind"
        android:text="@string/wind_speed"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_wind"
        app:layout_constraintTop_toTopOf="@+id/image_wind" />

    <TextView
        android:id="@+id/text_date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:text="@string/date1"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toStartOf="@+id/image_sunny2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_wind_speed" />

    <ImageView
        android:id="@+id/image_sunny2"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toStartOf="@+id/text_degree_range"
        app:layout_constraintStart_toEndOf="@+id/text_date1"
        app:layout_constraintTop_toTopOf="@+id/text_date1"
        app:srcCompat="@drawable/ic_sunny" />

    <TextView
        android:id="@+id/text_degree_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/degree_range"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_sunny2"
        app:layout_constraintTop_toTopOf="@+id/image_sunny2" />

    <TextView
        android:id="@+id/text_date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/date2"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@+id/text_date1"
        app:layout_constraintTop_toBottomOf="@+id/text_date1" />

    <ImageView
        android:id="@+id/image_cloudy"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toStartOf="@+id/text_degree_range2"
        app:layout_constraintStart_toEndOf="@+id/text_date2"
        app:layout_constraintTop_toTopOf="@+id/text_date2"
        app:srcCompat="@drawable/ic_cloudy" />

    <TextView
        android:id="@+id/text_degree_range2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_range"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/text_degree_range"
        app:layout_constraintTop_toTopOf="@+id/image_cloudy" />

    <TextView
        android:id="@+id/text_date3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/date3"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@+id/text_date2"
        app:layout_constraintTop_toBottomOf="@+id/text_date2" />

    <ImageView
        android:id="@+id/image_sunny3"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        app:layout_constraintEnd_toStartOf="@+id/text_degree_range3"
        app:layout_constraintStart_toEndOf="@+id/text_date3"
        app:layout_constraintTop_toTopOf="@+id/text_date3"
        app:srcCompat="@drawable/ic_sunny" />

    <TextView
        android:id="@+id/text_degree_range3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_range"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/text_degree_range2"
        app:layout_constraintTop_toTopOf="@+id/image_sunny3" />

    <TextView
        android:id="@+id/text_date4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/date4"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@+id/text_date3"
        app:layout_constraintTop_toBottomOf="@+id/text_date3" />

    <TextView
        android:id="@+id/text_degree_range4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_range"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/text_degree_range3"
        app:layout_constraintTop_toTopOf="@+id/image_rainy" />

    <ImageView
        android:id="@+id/image_rainy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/text_degree_range4"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/text_date4"
        app:layout_constraintTop_toTopOf="@+id/text_date4"
        app:srcCompat="@drawable/ic_rainy" />



</androidx.constraintlayout.widget.ConstraintLayout>