<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rv_weather_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/weather_degree"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_image" />

            <ImageView
                android:id="@+id/rv_image"
                android:layout_width="@dimen/margin_xxlarge"
                android:layout_height="@dimen/margin_xxlarge"
                android:layout_marginEnd="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/rv_degree_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/degree_range"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="@+id/rv_weather_degree"
                app:layout_constraintTop_toBottomOf="@+id/rv_weather_degree" />

            <TextView
                android:id="@+id/rv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/city"
                android:textColor="@color/text"
                android:layout_marginBottom="@dimen/margin_small"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rv_degree_range"
                app:layout_constraintTop_toBottomOf="@+id/rv_degree_range" />

            <TextView
                android:id="@+id/rv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunny"
                android:textColor="@color/text"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="@+id/rv_image"
                app:layout_constraintTop_toTopOf="@+id/rv_city" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>